# Lingo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
docs/research/: 2026-04-26-release-audit.md
examples/: benchmark.rs  python_client.py  server.rs  similarity.rs  translate.rs
scripts/: convert_nllb_safetensors.py  convert_sonar_safetensors.py
src/: cli.rs  download.rs  error.rs  labse.rs  languages.rs  lib.rs  license.rs  model.rs  sonar.rs
